--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,13 @@
 
 
 
-
   
+.success-message {
+    color: green;
+    font-weight: bold;
+  }
   
+  .error-message {
+    color: red;
+    font-weight: bold;
+  }
