mobile menu bug fix and font change

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
+
+@layer base {
+  body {
+    font-family: 'Pacifico', cursive;
+  }
+}
 
   
 .success-message {
